--- a/.sync.yml
+++ b/.sync.yml
@@ -19,3 +19,6 @@ Gemfile:
     ':test':
       - gem: 'webmock'
       - gem: 'toml-rb'
+spec/spec_helper.rb:
+  spec_overrides:
+  - require 'spec_helper_local'
